--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilerplate",
+  "name": "ingrad",
   "version": "1.2.5",
-  "description": "React Redux boilerplate app",
+  "description": "React Redux ingrad",
   "author": "AAA",
   "license": "MIT",
   "main": "index.js",
@@ -36,7 +36,8 @@
         "UV_THREADPOOL_SIZE": 64,
         "NODE_PATH": "./src",
         "SERVER": "127.0.0.1",
-        "SERVER_PORT": 8009
+        "SERVER_PORT": 8009,
+        "API_PORT": 8008
       }
     },
     "build": {
@@ -86,10 +87,12 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-display-name": "^6.3.13",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "body-parser": "^1.18.2",
     "clean-webpack-plugin": "^0.1.17",
     "cors": "^2.8.4",
     "express": "^4.15.2",
     "isomorphic-fetch": "2.2.1",
+    "moment": "^2.20.1",
     "piping": "^1.0.0-rc.4",
     "prop-types": "15.5.8",
     "react": "^15.5.4",
