--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "react": "^15.5.4",
     "react-bootstrap": "0.30.9",
     "react-dom": "15.5.4",
+    "react-google-maps": "^9.4.5",
     "react-redux": "5.0.4",
     "react-router": "3.0.5",
     "redux": "3.6.0",
