--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "react-google-maps": "^9.4.5",
     "react-redux": "5.0.4",
     "react-router": "3.0.5",
+    "recompose": "^0.26.0",
     "redux": "3.6.0",
     "redux-logger": "2.10.2",
     "redux-saga": "^0.15.3",
