--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "react": "^15.5.4",
     "react-bootstrap": "0.30.9",
     "react-dom": "15.5.4",
+    "react-dropzone": "^4.2.7",
     "react-google-maps": "^9.4.5",
     "react-redux": "5.0.4",
     "react-router": "3.0.5",
