--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "isomorphic-fetch": "2.2.1",
     "moment": "^2.20.1",
     "mongoose": "^4.13.9",
+    "multer": "^1.3.0",
     "piping": "^1.0.0-rc.4",
     "prop-types": "15.5.8",
     "react": "^15.5.4",
