--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "build": {
       "command": "webpack --verbose --progress --colors --display-error-details --config webpack/prod.config.js",
       "env": {
-        "SERVER": "138.68.182.94",
-        "SERVER_PORT": 8080,
+        "SERVER": "http://map-ingrad.ru",
+        "SERVER_PORT": 80,
         "NODE_ENV": "production"
       }
     }
