--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ingrad",
+  "name": "ingrad-admin",
   "version": "1.2.5",
   "description": "React Redux ingrad",
   "author": "AAA",
