--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ingrad-kpi",
+  "name": "ingrad-status",
   "version": "1.2.5",
   "description": "React Redux ingrad",
   "author": "AAA",
@@ -18,7 +18,7 @@
       "command": "pm2 start ./pm2_config.json",
       "env": {
         "SERVER": "138.68.182.94",
-        "SERVER_PORT": 8091,
+        "SERVER_PORT": 8092,
         "MONGO_HOST": "127.0.0.1",
         "MONGO_DB": "ingrad",
         "NODE_ENV": "production"
@@ -47,8 +47,8 @@
     "build": {
       "command": "webpack --verbose --progress --colors --display-error-details --config webpack/prod.config.js",
       "env": {
-        "SERVER": "map-ingrad.ru",
-        "SERVER_PORT": 8091,
+        "SERVER": "138.68.182.94",
+        "SERVER_PORT": 8092,
         "NODE_ENV": "production"
       }
     }
@@ -106,10 +106,10 @@
     "multer": "^1.3.0",
     "piping": "^1.0.0-rc.4",
     "prop-types": "15.5.8",
-    "react": "^15.5.4",
+    "react": "^16.3.2",
     "react-bootstrap": "0.30.9",
     "react-color": "^2.13.8",
-    "react-dom": "15.5.4",
+    "react-dom": "^16.3.2",
     "react-dropzone": "^4.2.7",
     "react-google-maps": "^9.4.5",
     "react-redux": "5.0.4",
