--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "react": "^15.5.4",
     "react-bootstrap": "0.30.9",
     "react-color": "^2.13.8",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "15.5.4",
     "react-dropzone": "^4.2.7",
     "react-google-maps": "^9.4.5",
