--- a/pm2_config.json
+++ b/pm2_config.json
@@ -1,6 +1,6 @@
 {
     "apps": [{
-        "name": "ingrad-status",
+        "name": "ingrad-docs",
         "script": "src/backend",
         "watch": false,
         "exec_interpreter": "babel-node",
