--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   },
   "betterScripts": {
     "start-prod": {
-      "command": "pm2 start ./pm2_config.json",
+      "command": "forever start --id \"admin\" -c \"node -r babel-register\" ./src/backend/index.js",
       "env": {
-        "SERVER": "138.68.182.94",
+        "SERVER": "gis.ingrad.com",
         "SERVER_PORT": 8090,
         "MONGO_HOST": "127.0.0.1",
         "MONGO_DB": "ingrad",
@@ -47,7 +47,7 @@
     "build": {
       "command": "webpack --verbose --progress --colors --display-error-details --config webpack/prod.config.js",
       "env": {
-        "SERVER": "map-ingrad.ru",
+        "SERVER": "gis.ingrad.com",
         "SERVER_PORT": 8090,
         "NODE_ENV": "production"
       }
@@ -97,6 +97,7 @@
     "clean-webpack-plugin": "^0.1.17",
     "cors": "^2.8.4",
     "csv": "^2.0.0",
+    "csv-parse": "^2.4.0",
     "express": "^4.15.2",
     "google-map-react": "^0.29.0",
     "isomorphic-fetch": "2.2.1",
