--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   },
   "betterScripts": {
     "start-prod": {
-      "command": "pm2 start ./pm2_config.json",
+      "command": "forever --id \"maps\" start -c \"node -r babel-register\" ./src/backend/index.js",
       "env": {
-        "SERVER": "138.68.182.94",
-        "SERVER_PORT": 8080,
+        "SERVER": "gis.ingrad.com",
+        "SERVER_PORT": 443,
+        "SSL": true,
         "MONGO_HOST": "127.0.0.1",
         "MONGO_DB": "ingrad",
         "NODE_ENV": "production"
@@ -40,6 +41,7 @@
         "UV_THREADPOOL_SIZE": 64,
         "NODE_PATH": "./src",
         "SERVER": "127.0.0.1",
+        "REACT_360_URL": "https://gis.ingrad.com:8081/index.html",
         "SERVER_PORT": 8009,
         "API_PORT": 8008
       }
@@ -47,8 +49,10 @@
     "build": {
       "command": "webpack --verbose --progress --colors --display-error-details --config webpack/prod.config.js",
       "env": {
-        "SERVER": "map-ingrad.ru",
-        "SERVER_PORT": 8080,
+        "SERVER": "gis.ingrad.com",
+        "SERVER_PORT": 443,
+        "SSL": true,
+        "REACT_360_URL": "https://gis.ingrad.com:8081/index.html",
         "NODE_ENV": "production"
       }
     }
@@ -86,6 +90,9 @@
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
+    "react-native": "~0.49.5",
+    "three": "^0.87.0",
+    "react-360-web": "~1.0.0",
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
@@ -105,6 +112,7 @@
     "piping": "^1.0.0-rc.4",
     "prop-types": "15.5.8",
     "react": "^15.5.4",
+    "react-360": "^1.0.0",
     "react-bootstrap": "0.30.9",
     "react-color": "^2.13.8",
     "react-dom": "15.5.4",
