--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "react": "^16.3.2",
     "react-bootstrap": "0.30.9",
     "react-color": "^2.13.8",
+    "react-datepicker": "^1.5.0",
     "react-dom": "^16.3.2",
     "react-dropzone": "^4.2.7",
     "react-google-maps": "^9.4.5",
