--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "react-google-maps": "^9.4.5",
     "react-redux": "5.0.4",
     "react-router": "3.0.5",
+    "react-table": "^6.8.6",
     "recompose": "^0.26.0",
     "redux": "3.6.0",
     "redux-logger": "2.10.2",
