--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "SERVER": "127.0.0.1",
         "SERVER_PORT": 8008,
         "MONGO_HOST": "127.0.0.1",
-        "MONGO_DB": "ingrad",
+        "MONGO_DB": "ingrad-test",
         "CORE_URL": "/",
         "NODE_ENV": "development"
       }
@@ -66,12 +66,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-runtime": "^6.23.0",
     "better-npm-run": "^0.1.0",
     "compression-webpack-plugin": "^0.3.2",
     "css-loader": "^0.26.4",
     "eslint": "^3.19.0",
-    "eslint-loader": "1.7.1",
+    "eslint-loader": "^1.7.1",
     "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^2.1.2",
     "isomorphic-style-loader": "^4.0.0",
@@ -97,6 +96,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-display-name": "^6.3.13",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-runtime": "^6.26.0",
     "body-parser": "^1.18.2",
     "clean-webpack-plugin": "^0.1.17",
     "cors": "^2.8.4",
@@ -104,26 +104,26 @@
     "csv-parse": "^2.4.0",
     "express": "^4.15.2",
     "google-map-react": "^0.29.0",
-    "isomorphic-fetch": "2.2.1",
+    "isomorphic-fetch": "^2.2.1",
     "moment": "^2.20.1",
     "mongoose": "^4.13.9",
     "multer": "^1.3.0",
     "piping": "^1.0.0-rc.4",
-    "prop-types": "15.5.8",
-    "react": "^15.5.4",
-    "react-bootstrap": "0.30.9",
+    "prop-types": "^15.5.8",
+    "react": "^16.3.2",
+    "react-bootstrap": "^0.32.3",
     "react-color": "^2.13.8",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "15.5.4",
+    "react-dom": "^16.3.2",
     "react-dropzone": "^4.2.7",
     "react-google-maps": "^9.4.5",
-    "react-redux": "5.0.4",
-    "react-router": "3.0.5",
+    "react-redux": "^5.0.4",
+    "react-router": "^3.0.5",
     "recompose": "^0.26.0",
-    "redux": "3.6.0",
-    "redux-logger": "2.10.2",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.10.2",
     "redux-saga": "^0.15.3",
-    "redux-thunk": "2.2.0",
+    "redux-thunk": "^2.2.0",
     "strip-loader": "^0.1.2",
     "uuid": "^3.2.1",
     "webpack-isomorphic-tools": "^3.0.5",
